--- a/include/defs.h.in
+++ b/include/defs.h.in
@@ -319,7 +319,7 @@
 #undef HYPERDCC
 
 /* Define this if you don't want ScrollZ trademarks in KICKs and AWAY msgs */
-#undef VILAS
+#define VILAS
 
 /* Define this if you want better /NEWHOST */
 #undef JIMMIE
