VILAS should not be #define-d by default since -DVILAS is only used in ctcp.c.

--- a/include/defs.h.in
+++ b/include/defs.h.in
@@ -319,7 +319,7 @@
 #undef HYPERDCC
 
 /* Define this if you don't want ScrollZ trademarks in KICKs and AWAY msgs */
-#define VILAS
+#undef VILAS
 
 /* Define this if you want better /NEWHOST */
 #undef JIMMIE
