Added #undef OPER.

--- a/include/defs.h.in
+++ b/include/defs.h.in
@@ -335,4 +335,7 @@
 
 /* Define this if you want $country() in the client */
 #undef COUNTRY
+
+/* Define this if you want irc oper stuff (not OperVision!) */
+#undef OPER
 /****************************************************************************/
