Make OGRE #undefined by default.

--- a/include/defs.h.in
+++ b/include/defs.h.in
@@ -357,5 +357,5 @@
 #undef OPER
 
 /* Define this if you want ogre's cosmetics in OperVision */
-#define OGRE
+#undef OGRE
 /****************************************************************************/
