--- a/Makefile.in
+++ b/Makefile.in
@@ -28,7 +28,7 @@
 # OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 # SUCH DAMAGE.
 #
-# @(#)$Id: Makefile.in,v 1.4 2000-08-14 20:38:13 f Exp $
+# @(#)$Id: Makefile.in,v 1.5 2000-08-17 19:56:20 f Exp $
 
 # targets recognised by this makefile:
 #   all, everything	- compiles ircii, ircio, ircflush and wserv
@@ -62,7 +62,7 @@ INSTALL_IRC = ${bindir}/irc
 # Where the ircII library will be.  Generally this is the place that
 # you put the scripts, help pages and translation tables.  It is
 # very important that you set this correctly.
-IRCLIB = @IRCLIB@
+IRCLIB = ${libdir}/irc
 
 # Set this to the lex you want to use, and if they lex uses a library.
 
