--- a/configure.in
+++ b/configure.in
@@ -31,9 +31,9 @@ dnl
 dnl thanks to the screen 3.3 configure.in for giving me examples to
 dnl work from and steal ;)
 dnl
-dnl @(#)$Id: configure.in,v 1.11 2000-08-20 10:17:31 f Exp $
+dnl @(#)$Id: configure.in,v 1.12 2000-09-10 09:16:03 f Exp $
 
-AC_REVISION($Revision: 1.11 $)dnl
+AC_REVISION($Revision: 1.12 $)dnl
 AC_INIT(${srcdir}/source/irc.c)
 AC_CONFIG_HEADER(include/defs.h)
 
@@ -61,7 +61,7 @@ CATEGORIES='build change-request doc pending runtime'
 AC_SUBST(CATEGORIES)
 
 dnl so that the generated configure has an id.
-echo '$Id: configure.in,v 1.11 2000-08-20 10:17:31 f Exp $' > /dev/null
+echo '$Id: configure.in,v 1.12 2000-09-10 09:16:03 f Exp $' > /dev/null
 
 dnl
 dnl initial stuff
@@ -542,7 +542,7 @@ main()
 {
   struct hostent *hp;
 
-  hp = gethostbyname("`hostname`");
+  hp = gethostbyname("`uname -n`");
   exit(0);
 }
 ],,LIBS=$olibs, :))
