--- a/configure.in
+++ b/configure.in
@@ -31,9 +31,9 @@ dnl
 dnl thanks to the screen 3.3 configure.in for giving me examples to
 dnl work from and steal ;)
 dnl
-dnl @(#)$Id: configure.in,v 1.12 2000-09-10 09:16:03 f Exp $
+dnl @(#)$Id: configure.in,v 1.13 2001-02-26 18:30:40 f Exp $
 
-AC_REVISION($Revision: 1.12 $)dnl
+AC_REVISION($Revision: 1.13 $)dnl
 AC_INIT(${srcdir}/source/irc.c)
 AC_CONFIG_HEADER(include/defs.h)
 
@@ -61,7 +61,7 @@ CATEGORIES='build change-request doc pending runtime'
 AC_SUBST(CATEGORIES)
 
 dnl so that the generated configure has an id.
-echo '$Id: configure.in,v 1.12 2000-09-10 09:16:03 f Exp $' > /dev/null
+echo '$Id: configure.in,v 1.13 2001-02-26 18:30:40 f Exp $' > /dev/null
 
 dnl
 dnl initial stuff
@@ -919,38 +919,17 @@ if test "x$socks" = "x4" -o "x$socks" = "x5"; then
 AC_MSG_RESULT(no, bacause you enabled SOCKS$socks support)
 else
 AC_ARG_ENABLE(ipv6,
-[  --enable-ipv6                Enable ipv6 (with ipv4) support
-  --disable-ipv6                Disable ipv6 support],
+[  --enable-ipv6           Enable ipv6 (with ipv4) support],
 [ case "$enableval" in
-  no)
-       AC_MSG_RESULT(no)
-       ipv6=no
-       ;;
-  *)   AC_MSG_RESULT(yes)
+  yes) AC_MSG_RESULT(yes)
        AC_DEFINE(INET6)
        ipv6=yes
        ;;
-  esac ],
-
-  AC_TRY_RUN([ /* AF_INET6 avalable check */
-#include <sys/types.h>
-#include <sys/socket.h>
-main()
-{
- if (socket(AF_INET6, SOCK_STREAM, 0) < 0)
-   exit(1);
- else
-   exit(0);
-}
-],
-  AC_MSG_RESULT(yes)
-  AC_DEFINE(INET6)
-  ipv6=yes,
-  AC_MSG_RESULT(no)
-  ipv6=no,
-  AC_MSG_RESULT(no)
-  ipv6=no
-))
+  esac ])
+if test "x$ipv6" = "xno" -o "x$ipv6" = "x" ; then
+       AC_MSG_RESULT(no)
+       ipv6=no
+fi
 
 ipv6type=unknown
 ipv6lib=none
