--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -3,7 +3,7 @@
 # all rights reserved
 # written by matthew green.
 # copyright (c) 1993
-# @(#)$Id: Makefile.in,v 1.4 2000-08-09 19:31:20 f Exp $
+# @(#)$Id: Makefile.in,v 1.5 2001-05-09 18:06:41 f Exp $
 
 LIBS	= @LIBS@
 CC	= @CC@
@@ -46,7 +46,7 @@ INCLUDES = -I../include
 default:
 	(cd ..;make)
 
-all: irc
+all: scrollz
 
 # got I hate typos.
 clena: clean
@@ -54,12 +54,12 @@ clena: clean
 .c.o:
 	$(CC) $(INCLUDES) $(CFLAGS) $(DEFS) $(PP_DEFS) -c $<
 
-irc: $(OBJECTS)
-	$(CC) $(CFLAGS) $(LDFLAGS) $(DEFS) -o irc $(OBJECTS) $(LIBS)
+scrollz: $(OBJECTS)
+	$(CC) $(CFLAGS) $(LDFLAGS) $(DEFS) -o scrollz $(OBJECTS) $(LIBS)
 clean::
-	$(RM) irc $(OBJECTS)
+	$(RM) scrollz $(OBJECTS)
 
-install: irc
+install: scrollz
 	cd ..; $(MAKE) install
 
 # .o files needing special compilation flags
