--- a/configure.in
+++ b/configure.in
@@ -31,9 +31,9 @@ dnl
 dnl thanks to the screen 3.3 configure.in for giving me examples to
 dnl work from and steal ;)
 dnl
-dnl @(#)$Id: configure.in,v 1.14 2001-05-09 18:06:41 f Exp $
+dnl @(#)$Id: configure.in,v 1.15 2001-05-09 18:33:52 f Exp $
 
-AC_REVISION($Revision: 1.14 $)dnl
+AC_REVISION($Revision: 1.15 $)dnl
 AC_INIT(${srcdir}/source/irc.c)
 AC_CONFIG_HEADER(include/defs.h)
 
@@ -61,7 +61,7 @@ CATEGORIES='build change-request doc pending runtime'
 AC_SUBST(CATEGORIES)
 
 dnl so that the generated configure has an id.
-echo '$Id: configure.in,v 1.14 2001-05-09 18:06:41 f Exp $' > /dev/null
+echo '$Id: configure.in,v 1.15 2001-05-09 18:33:52 f Exp $' > /dev/null
 
 dnl
 dnl initial stuff
@@ -697,7 +697,7 @@ AC_SUBST(bindir)
 
 if test ! -n "$IRCLIB";
 then
-	IRCLIB=\${datadir}/irc
+	IRCLIB=\${datadir}/scrollz
 fi
 AC_SUBST(IRCLIB)
 
@@ -705,7 +705,9 @@ if test "x$exec_prefix" = "xNONE"; then
   if test "x$prefix" = "xNONE"; then
     libdir="$ac_default_prefix/lib"
   else
-    libdir="$prefix/lib"
+    if test "x$libdir" = "xNONE"; then
+      libdir="$prefix/lib"
+    fi
   fi
 else
   libdir="$exec_prefix/lib"
