--- a/Makefile.in
+++ b/Makefile.in
@@ -28,7 +28,7 @@
 # OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 # SUCH DAMAGE.
 #
-# @(#)$Id: Makefile.in,v 1.11 2001-07-01 09:33:29 f Exp $
+# @(#)$Id: Makefile.in,v 1.12 2001-07-04 17:34:59 f Exp $
 
 # targets recognised by this makefile:
 #   all, everything	- compiles ircii, ircio, ircflush and wserv
@@ -173,6 +173,7 @@ all: scrollz
 install: all installbin installdirs
 
 scrollz: source/Makefile Makefile
+	@cd include; $(MAKE)
 	@cd source; $(MAKE) all
 
 installeverything: install installflush installio installwserv
