Added note about missing ICB support.

--- a/scrollz.1.in
+++ b/scrollz.1.in
@@ -166,6 +166,9 @@ is initiated.
 The nickname is limited to 9 characters on many IRC networks.
 .PP
 The server list is a whitespace-separated list of server names.
+.PP
+.B ScrollZ
+does NOT have the ICB support that is available in ircII.
 .SH AUTHORS
 This manual page was written by Mike Markley <mike@markley.org>,
 for the Debian GNU/Linux system (but may be used by others).
