--- a/include/defs.h.in
+++ b/include/defs.h.in
@@ -363,6 +363,9 @@
 /* Define this if you want formatted /CSCAN */
 #define NEWCSCAN
 
+/* Define this if you want () arround nick in public messages */
+#undef ALTERNATIVE_PUBLICS
+
 /* Define this if you feel users should be invited to non +i channels on
    notify signon */
 #undef ACID
