--- a/scrollz.1.in
+++ b/scrollz.1.in
@@ -173,7 +173,14 @@ available in ircII.
 .SH AUTHORS
 This manual page was written by Mike Markley <mike@markley.org>,
 for the Debian GNU/Linux system (but may be used by others).
-Updated for ScrollZ by Flier <flier@scrollz.com>.
+Updated for ScrollZ by Flier <flier@scrollz.com> (the
+ScrollZ maintainer).
+.PP
+.B ScrollZ
+home page: http://www.scrollz.com/
+.PP
+.B ScrollZ
+FTP site: ftp://ftp.scrollz.com/
 .SH BUG REPORTS
 If you find a bug in 
 .B ScrollZ
