--- a/configure.in
+++ b/configure.in
@@ -31,9 +31,9 @@ dnl
 dnl thanks to the screen 3.3 configure.in for giving me examples to
 dnl work from and steal ;)
 dnl
-dnl @(#)$Id: configure.in,v 1.17 2001-07-01 09:20:10 f Exp $
+dnl @(#)$Id: configure.in,v 1.18 2001-12-19 17:55:39 f Exp $
 
-AC_REVISION($Revision: 1.17 $)dnl
+AC_REVISION($Revision: 1.18 $)dnl
 AC_INIT(${srcdir}/source/irc.c)
 AC_CONFIG_HEADER(include/defs.h)
 
@@ -62,7 +62,7 @@ CATEGORIES='build change-request doc pending runtime'
 AC_SUBST(CATEGORIES)
 
 dnl so that the generated configure has an id.
-echo '$Id: configure.in,v 1.17 2001-07-01 09:20:10 f Exp $' > /dev/null
+echo '$Id: configure.in,v 1.18 2001-12-19 17:55:39 f Exp $' > /dev/null
 
 dnl
 dnl initial stuff
@@ -1161,6 +1161,29 @@ AC_TRY_LINK([
   AC_DEFINE(HAVE_SOCKADDR_SA_LEN)
   AC_MSG_RESULT(yes),
   AC_MSG_RESULT(no))
+
+AC_MSG_CHECKING([whether to enable SSL])
+AC_ARG_ENABLE(ssl,
+[  --enable-ssl            Enable SSL support using OpenSSL],
+[ case "$enableval" in
+  yes) AC_MSG_RESULT(yes)
+       AC_MSG_CHECKING([for OpenSSL])
+       LIBS="$LIBS -lssl -lcrypto"
+       AC_TRY_LINK([
+#include <openssl/opensslv.h>
+],     [ return OPENSSL_VERSION_NUMBER; ],
+       [ AC_MSG_RESULT(yes)
+       AC_DEFINE(HAVE_SSL)
+       ssl=yes ],
+       [ AC_MSG_RESULT(no)
+       LIBS="$ac_save_LIBS"
+       ssl=no ])
+       ;;
+  esac ])
+if test "x$ssl" = "xno" -o "x$ssl" = "x" ; then
+       AC_MSG_RESULT(no)
+       ssl=no
+fi
 
 if test -n "$hpux"
 then
