Define HAVE_SSL if OpenSSL is available so client compiles properly.

--- a/include/defs.h.in
+++ b/include/defs.h.in
@@ -409,4 +409,7 @@
 
 /* Define this if you want client w/o certain functionality */
 #undef LITE
+
+/* Define this if you have OpenSSL */
+#undef HAVE_SSL
 /****************************************************************************/
