--- a/configure.in
+++ b/configure.in
@@ -31,9 +31,9 @@ dnl
 dnl thanks to the screen 3.3 configure.in for giving me examples to
 dnl work from and steal ;)
 dnl
-dnl @(#)$Id: configure.in,v 1.19 2001-12-23 17:29:32 f Exp $
+dnl @(#)$Id: configure.in,v 1.20 2002-01-17 19:36:59 f Exp $
 
-AC_REVISION($Revision: 1.19 $)dnl
+AC_REVISION($Revision: 1.20 $)dnl
 AC_INIT(${srcdir}/source/irc.c)
 AC_CONFIG_HEADER(include/defs.h)
 
@@ -62,7 +62,7 @@ CATEGORIES='build change-request doc pending runtime'
 AC_SUBST(CATEGORIES)
 
 dnl so that the generated configure has an id.
-echo '$Id: configure.in,v 1.19 2001-12-23 17:29:32 f Exp $' > /dev/null
+echo '$Id: configure.in,v 1.20 2002-01-17 19:36:59 f Exp $' > /dev/null
 
 dnl
 dnl initial stuff
@@ -1162,13 +1162,26 @@ AC_TRY_LINK([
   AC_MSG_RESULT(yes),
   AC_MSG_RESULT(no))
 
+AC_ARG_WITH(ssl,
+[  --with-ssl=PATH         Prefix where OpenSSL is installed (optional)],
+   openssl_prefix="$withval", openssl_prefix="")
+
 AC_MSG_CHECKING([whether to enable SSL])
 AC_ARG_ENABLE(ssl,
 [  --enable-ssl            Enable SSL support using OpenSSL],
 [ case "$enableval" in
   yes) AC_MSG_RESULT(yes)
        AC_MSG_CHECKING([for OpenSSL])
-       LIBS="$LIBS -lssl -lcrypto"
+       if test -d "$openssl_prefix/include"; then
+         CFLAGS="-I$openssl_prefix/include $CFLAGS"
+       else
+         CFLAGS="-I$openssl_prefix $CFLAGS"
+       fi
+       if test -d "$openssl_prefix/lib"; then
+         LIBS="-L$openssl_prefix/lib $LIBS -lssl -lcrypt"
+       else
+         LIBS="-L$openssl_prefix $LIBS -lssl -lcrypt"
+       fi
        AC_TRY_LINK([
 #include <openssl/opensslv.h>
 ],     [ return OPENSSL_VERSION_NUMBER; ],
